# test-assets-ureq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: binaries.yml  main.yml  msrv.yml
src/: hash_list.rs  lib.rs
