[package]
name = "test-assets-ureq"
version = "0.3.0"
license = "MIT/Apache-2.0"
description = "Download test assets with ureq, managing them outside of git"
documentation = "https://docs.rs/test-assets-ureq/"
repository = "https://github.com/wcampbell0x2a/test-assets-ureq"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[dependencies]
sha2 = "0.10.6"
backon = "1.2.0"
ureq = "2.7.1"
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
